# sdc

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  download_data.sh  pyproject.toml  temp_prompt.txt
.github/workflows/: docker.yml
.junie/skills/sdc-db/: SKILL.md
.junie/skills/sdc-release/: SKILL.md
.junie/skills/sj2-server/: SKILL.md
deploy/: deploy_to_sj2.sh
deploy/prod/: README.md  compose.yaml
docs/: architecture.md  database.md  deploy.md  feature_sqls.md  holidays_krx.csv  local_postgres_migration.md  operations.md
docs/dev/060419_account_info/: plan.md
docs/dev/20260606_data_year_range_verify/: dart_multiyear_backfill_plan.md  data_year_range_verification.md
docs/dev/20260607_ETL/: etl_design_and_plan.md
docs/dev/20260608_common_features/: bare_result_00.md  bare_result_01.md  plan_00.md  source_catalog_00.md
docs/dev/20260611_daily_pipeline_fix/: 00_plan.md
docs/dev/20260612_module_align_refactor/: audit_and_refactor_plan.md  cronicle_incremental_refactor_plan.md  flows_sync_incremental_plan.md
docs/dev/20260613_refactoring/: deployment_execution_plan.md  incremental_collection_plan.md  source_wrapper_throttling_plan.md
docs/dev/20260614_refactor_sync/: remote_sync_incremental_mirror_plan.md
docs/dev/20260614_sync_performance/: remote_sync_copy_and_ssh_compression_plan.md
docs/dev/20260615_cronicles_events_summary/: cronicle_events_overview.md  domain_chained_cronicle_reconfiguration_plan.md
docs/dev/20260619_rust_exporter/: etl_engine_benchmark.py  raw_parquet_exporter_benchmark_20260619.md  raw_parquet_exporter_rust_plan.md
docs/dev/20260627_correlation_fs_raw/: 00_plan.md
docs/dev/20260728_refactor_pipeline/: 00_refactor_plan.md  01_implementation_status.md
docs/dev/260228_init_project/: plan.v01.md  plan.v01.phase2.codex.md  plan.v01.phase2.flash.md
docs/dev/260422_multiple_opendart_api_key/: multiple_opendart_api_key_design.md
docs/dev/260422_opendart_api_error_handling/: opendart_api_error_handling_review.md  refactor_plan.md
docs/dev/260425_stop_after_all_opendart_key_consumed/: all_years_opendart_backfill_plan.md  todo.md
docs/dev/260426_metrics_normalize_small_memory/: plan_chunked_python_normalize.md  proposal.md
docs/dev/260426_pykrx_error/: claude_resume  flows_sync_direct_krx_plan.md
docs/dev/260620_slow_krx_issue/: krx_collection_throttle_timing.md  krx_flows_slow_issue_analysis.md  krx_improve_A.md  krx_improve_B.md  krx_improve_final.md
docs/features/automated_feature_profiling_plans/: final.md
prompts/260228_init_project/: init_project.summary.md  init_project.txt  plan.v01.phase1.md  plan.v01.phase1.opus.md
research/: __init__.py
research/etl/: __init__.py  calendar.py  compute_all.py  config.py  labels.py  lake.py  manifest.py  mart.py  metrics.py  preprocess.py  splits.py  universe.py
research/models/: __init__.py
sql/: postgres_ddl.sql
sql/migrations/: 20260728_drop_derived_tables.sql
src/krx_collector/: __init__.py  __main__.py  main.py
tests/helpers/: fake_opendart_executor.py
tests/integration/: test_db_connection.py  test_pipeline.py  test_placeholder.py  test_profiling_pipeline.py  test_research_build_dataset_smoke.py  test_research_calendar_universe_smoke.py  test_research_common_event_smoke.py  test_research_features_smoke.py  test_research_fin_pit_smoke.py  test_research_labels_smoke.py  test_research_lake_smoke.py  test_research_train_smoke.py  test_universe_fdr_live.py  test_universe_pykrx_live.py
tests/shell/: sdc-wrapper-smoke.sh
tests/unit/: _common_fixtures.py  _metric_fixtures.py  test_build_common_feature_daily_facts.py  test_calendar.py  test_cli_entrypoints.py  test_common_build_mart.py  test_common_feature_availability.py  test_common_feature_coverage_report.py  test_common_feature_models.py  test_common_feature_readiness_report.py  test_common_features_ecos_client.py  test_common_features_ecos_provider.py  test_common_features_fdr_provider.py  test_common_features_fred_client.py  test_common_features_fred_provider.py  test_common_features_krx_provider.py  test_common_features_pykrx_provider.py  test_common_features_storage.py  test_dart_target_plan.py  test_db_connection.py  test_default_common_feature_catalog.py  test_flows_krx.py  test_flows_pykrx.py  test_freshness.py  test_metric_coverage_report.py  test_metric_normalization.py  test_metrics_normalize_mart.py  test_opendart_common_client.py  test_opendart_corp.py  test_opendart_financials.py  test_opendart_share_info.py  test_opendart_xbrl.py  test_operating_metrics.py  test_phase0.py  test_pipeline_common.py  test_placeholder.py  test_profiling.py  test_remote_db_sync.py  test_reports_mart.py  test_research_calendar_universe.py  (+15 more)
tools/raw-parquet-exporter/: Cargo.toml  README.md
tools/raw-parquet-exporter/config/: canonical.example.toml  export_canonical_tables.toml  export_tables.toml  local.example.toml
tools/raw-parquet-exporter/src/: cli.rs  config.rs  db.rs  error.rs  export.rs  lib.rs  main.rs  manifest.rs  parquet_writer.rs  planner.rs  sample_validate.rs  schema.rs
(+172 files in other folders)
