[project]
name = "krx-data-pipeline"
version = "0.8.14"
description = "Maintainable Korean stock data pipeline: universe sync, daily OHLCV, OpenDART financials/XBRL, KRX flows, and sector-specific operating KPIs."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "KRX Pipeline Team" }]
dependencies = [
    "finance-datareader>=0.9.110",
    "pykrx>=1.2.8",
    "pandas>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "psycopg2-binary>=2.9",
    "requests>=2.0",
    "setuptools<70.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "pytest>=8.0",
]
# Profiling/analysis tooling — NOT bundled into the production image.
# Used by the `profile` CLI to render notebooks, HTML, and Parquet artifacts.
analysis = [
    "matplotlib>=3.8",
    "plotly>=5.20",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "nbconvert>=7.16",
    "pyarrow>=15",
    "ipykernel>=6.29",
]
# Research / model ETL over the Parquet lake — NOT bundled into the production image.
# Reads data_lake/ parquet only (no DB). Engines confirmed by the ETL engine
# benchmark (docs/target/01_20_access_return_rank/etl_02_engine_comparison.md):
# DuckDB main + Polars for the model-input stage. Versions pinned to the
# benchmarked set so a fresh clone reproduces the ETL.
research = [
    "duckdb>=1.5",
    "polars>=1.41",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[project.scripts]
krx-collector = "krx_collector.cli.app:main"
dart = "krx_collector.cli.app:dart_main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
# "src" for krx_collector; "." so the analysis-only `research` package (repo
# root, not packaged into the wheel) is importable in tests.
pythonpath = ["src", "."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/krx_collector"]
