[package]
name = "raw-parquet-exporter"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
arrow = "57"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
futures-util = "0.3"
parquet = { version = "57", features = ["arrow", "zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
